# mobile-robot

./: .gitignore  README.md
src/mobile_robot_description/: package.xml  setup.py
src/mobile_robot_description/config/: nav2_params.yaml
src/mobile_robot_description/launch/: nav2_simulation.launch.py
src/mobile_robot_description/maps/: map.yaml
src/mobile_robot_description/mobile_robot_description/: velocity_monitor.py
src/mobile_robot_description/rviz/: nav2_default_view.rviz
src/mobile_robot_description/urdf/: robot.urdf.xacro
urdf/: robot.urdf.xacro
