<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mobile_robot_description</name>
  <version>0.0.0</version>
  <description>Mobile robot description and Nav2 integration for forklift robot</description>
  <maintainer email="przemekcinkowski1@gmail.com">alan</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_common</depend>
  <depend>gazebo_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>joint_state_publisher</depend>
  <depend>rviz2</depend>

  <exec_depend>nav2_ackermann_controller</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
